[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nfs_enum"
version = "0.1"
dependencies = [
    'rpc @ git+ssh://git@github.com/hvs-consulting/pynfs.git#egg=rpc&subdirectory=rpc',
    'nfs4 @ git+ssh://git@github.com/hvs-consulting/pynfs.git#egg=nfs4&subdirectory=nfs4.1',
    'pyfuse3==3.3.0',
    'anfs==0.0.2',
]

[project.scripts]
nfs_analyze = 'nfs_analyze.nfs_analyze:main'
fuse_nfs = 'fuse_nfs.fuse_nfs:main'

[tool.setuptools]
packages = ['fuse_nfs', 'nfs_analyze']
