[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nfs_security_tooling"
version = "0.1"
dependencies = [
    'rpc @ git+https://github.com/hvs-consulting/pynfs.git#egg=rpc&subdirectory=rpc',
    'nfs4 @ git+https://github.com/hvs-consulting/pynfs.git#egg=nfs4&subdirectory=nfs4.1',
    'pyfuse3',
    'anfs @ git+https://github.com/skelsec/anfs.git',
    'xdrlib3; python_version>="3.13"',
    'standard-xdrlib'
]

[project.scripts]
nfs_analyze = 'nfs_analyze.nfs_analyze:main'
fuse_nfs = 'fuse_nfs.fuse_nfs:main'

[tool.setuptools]
packages = ['fuse_nfs', 'nfs_analyze']
